# enoa_sign_roller

./: .gitignore  Cargo.toml  Dockerfile  TODO.md  docker-compose.yaml  enoa_03_sign_pack.json
migrations/: V1__initial.sql
src/: config.rs  discord.rs  discord_endpoint_server.rs  main.rs  signs.rs
src/commands/: hello_world.rs  mod.rs  modify_sign.rs  sign_current.rs  sign_my_power.rs  sign_roll.rs  utils.rs
src/db/: mod.rs  psql.rs
src/test/: dao_test.rs  mod.rs
